--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "hbs": "^4.1.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "require": "^2.4.20"
   },
   "devDependencies": {
     "nodemon": "^1.2.0"
